adding tiktok compatibility

--- a/popup.html
+++ b/popup.html
@@ -34,6 +34,10 @@
     <span>Twitter/X</span>
     <input type="checkbox" id="twitter-toggle" checked>
   </div>
+  <div class="site-toggle">
+    <span>TikTok</span>
+    <input type="checkbox" id="tiktok-toggle" checked>
+  </div>
   <script src="popup.js"></script>
 </body>
 </html>
