twitter working, still need updates for page; working on styling button

--- a/popup.html
+++ b/popup.html
@@ -1,43 +1,133 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+
   <title>Escape the Algorithm Settings</title>
   <style>
     body {
-      width: 200px;
-      padding: 10px;
-      font-family: Arial, sans-serif;
+      width: 250px;
+      padding: 20px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #1a1a2e;
+      color: #e94560;
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+      font-weight: 300;
+      letter-spacing: 2px;
     }
     .site-toggle {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
+    }
+    .toggle-switch {
+      position: relative;
+      display: inline-block;
+      width: 50px;
+      height: 24px;
+    }
+    .toggle-switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #16213e;
+      transition: .4s;
+      border-radius: 34px;
+    }
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 18px;
+      width: 18px;
+      left: 3px;
+      bottom: 3px;
+      background-color: #0f3460;
+      transition: .4s;
+      border-radius: 50%;
+    }
+    input:checked + .slider {
+      background-color: #e94560;
+    }
+    input:checked + .slider:before {
+      transform: translateX(26px);
+      background-color: #1a1a2e;
+    }
+    .site-name {
+      font-size: 14px;
+      letter-spacing: 1px;
+    }
+    .report-button {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      margin-top: 20px;
+      background-color: #0f3460;
+      color: #e94560;
+      border: none;
+      border-radius: 5px;
+      font-size: 14px;
+      letter-spacing: 1px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+    .report-button:hover {
+      background-color: #e94560;
+      color: #1a1a2e;
+      transform: translateY(-2px);
+      box-shadow: 0 4px 8px rgba(233, 69, 96, 0.2);
     }
   </style>
 </head>
 <body>
-  <h2>Site Settings</h2>
+  <h2>ESCAPE THE ALGORITHM</h2>
   <div class="site-toggle">
-    <span>YouTube</span>
-    <input type="checkbox" id="youtube-toggle" checked>
+    <span class="site-name">YouTube</span>
+    <label class="toggle-switch">
+      <input type="checkbox" id="youtube-toggle" checked>
+      <span class="slider"></span>
+    </label>
   </div>
   <div class="site-toggle">
-    <span>Facebook</span>
-    <input type="checkbox" id="facebook-toggle" checked>
+    <span class="site-name">Facebook</span>
+    <label class="toggle-switch">
+      <input type="checkbox" id="facebook-toggle" checked>
+      <span class="slider"></span>
+    </label>
   </div>
   <div class="site-toggle">
-    <span>Instagram</span>
-    <input type="checkbox" id="instagram-toggle" checked>
+    <span class="site-name">Instagram</span>
+    <label class="toggle-switch">
+      <input type="checkbox" id="instagram-toggle" checked>
+      <span class="slider"></span>
+    </label>
   </div>
   <div class="site-toggle">
-    <span>Twitter/X</span>
-    <input type="checkbox" id="twitter-toggle" checked>
+    <span class="site-name">Twitter/X</span>
+    <label class="toggle-switch">
+      <input type="checkbox" id="twitter-toggle" checked>
+      <span class="slider"></span>
+    </label>
   </div>
   <div class="site-toggle">
-    <span>TikTok</span>
-    <input type="checkbox" id="tiktok-toggle" checked>
+    <span class="site-name">TikTok</span>
+    <label class="toggle-switch">
+      <input type="checkbox" id="tiktok-toggle" checked>
+      <span class="slider"></span>
+    </label>
   </div>
+<button id="report-button" class="report-button">&#x1F9D0; Report an Issue &#x1F527;</button>  
   <script src="popup.js"></script>
 </body>
 </html>
