lots of stuff ready for live

--- a/popup.html
+++ b/popup.html
@@ -92,6 +92,9 @@
 </head>
 <body>
   <h2>ESCAPE THE ALGORITHM</h2>
+    <div style="margin-top: 20px; font-size: 12px; color: #888;">
+    <p>📌 Tip: Pin this extension to your toolbar for easy access!🧩</p>
+</div>
   <div class="site-toggle">
     <span class="site-name">YouTube</span>
     <label class="toggle-switch">
