--- a/popup.html
+++ b/popup.html
@@ -19,33 +19,46 @@
       letter-spacing: 2px;
     }
     .site-toggle {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 15px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 15px;
+        padding: 5px;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
     }
+
+    .site-toggle:hover {
+        background-color: rgba(233, 69, 96, 0.1);
+    }
+
     .toggle-switch {
-      position: relative;
-      display: inline-block;
-      width: 50px;
-      height: 24px;
+        position: relative;
+        display: inline-block;
+        width: 50px;
+        height: 24px;
+        transition: transform 0.3s ease;
     }
-    .toggle-switch input {
-      opacity: 0;
-      width: 0;
-      height: 0;
+
+    .toggle-switch:hover {
+        transform: scale(1.05);
     }
     .slider {
-      position: absolute;
-      cursor: pointer;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: #16213e;
-      transition: .4s;
-      border-radius: 34px;
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #16213e;
+        transition: .4s, box-shadow 0.3s ease;
+        border-radius: 34px;
     }
+
+    .toggle-switch:hover .slider {
+        box-shadow: 0 0 8px rgba(233, 69, 96, 0.5);
+    }
+    
     .slider:before {
       position: absolute;
       content: "";
@@ -57,6 +70,8 @@
       transition: .4s;
       border-radius: 50%;
     }
+
+
     input:checked + .slider {
       background-color: #e94560;
     }
@@ -88,12 +103,20 @@
       transform: translateY(-2px);
       box-shadow: 0 4px 8px rgba(233, 69, 96, 0.2);
     }
+
+    input:checked + .slider {
+        background-color: #e94560;
+    }
+
+    .toggle-switch:hover input:checked + .slider {
+        box-shadow: 0 0 8px rgba(233, 69, 96, 0.8);
+    }
   </style>
 </head>
 <body>
   <h2>ESCAPE THE ALGORITHM</h2>
     <div style="margin-top: 20px; font-size: 12px; color: #888;">
-    <p>📌 Tip: Pin this extension to your toolbar for easy access!🧩</p>
+    <p>📌 Tip: Pin this extension to your toolbar for easy access 🧩</p>
 </div>
   <div class="site-toggle">
     <span class="site-name">YouTube</span>
